--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Avalon full-width responsive template</title>
-<!-- 
-Avalon Template 
-http://www.templatemo.com/tm-513-avalon
--->
+        <title>Calipso Events</title>
+
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -45,7 +42,7 @@ http://www.templatemo.com/tm-513-avalon
                 <div class="col-md-4">
                     <div class="right-banner-content">
                         <div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
-                        <h2>Avalon</h2>
+                        <h2>CALIPSO</h2>
                         <span>Creative <em>HTML</em> Template</span>
                         <div class="line-dec"></div>
                         <p>“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et sem blandit, rhoncus ante a, varius libero. Cras elementum tincidunt ullamcorper. Sed vehic ula dictum tortor ut aliquet. ”</p>
